--- a/pages/históricocorrencia.html
+++ b/pages/históricocorrencia.html
@@ -305,7 +305,7 @@
                             </button>
                           </h2>
                           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body d-flex" style="justify-content: space-evenly;">
+                            <div class="accordion-body w-100 d-flex" style="justify-content: space-around;">
                               <div class="division gap-2 d-flex" style="flex-direction: column;">
                                   <span class="d-flex">
                                       <div class="form-check">
@@ -362,7 +362,7 @@
                             </button>
                           </h2>
                           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body d-flex" style="justify-content: space-evenly;">
+                            <div class="accordion-body w-100 d-flex" style="justify-content: space-around;">
                                 <div class="division gap-2 d-flex" style="flex-direction: column;">
                                   <span class="d-flex">
                                     <div class="form-check">
@@ -498,7 +498,7 @@
                             </button>
                           </h2>
                           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body d-flex" style="justify-content: space-evenly;">
+                            <div class="accordion-body w-100 d-flex" style="justify-content: space-around;">
                               <div class="divison gap-2 d-flex" style="flex-direction: column;">
                                 <span class="d-flex">
                                   <div class="form-check">
