deu certo porra

--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -105,7 +105,7 @@
             width: 90%;
         }
 
-        #option{
+        #option {
             display: flex;
             background-color: rgba(127, 255, 212, 0.37);
         }
@@ -114,6 +114,18 @@
             display: flex;
             width: 100%;
         } */
+
+        .corpo{
+            display: flex;
+            background-color: aliceblue;
+            justify-content: center;
+        }
+        .row{
+            display: flex;
+            background-color: #333333;
+            width: 70%;
+        }
+        
     </style>
 
 </head>
@@ -237,21 +249,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="corpo">
+                    <div class="row" id="imageContainer">
+                        <img class="img" id="humanBody" src="/images/corpo_maior.PNG" alt="body-image">
+                    </div>
+                </div>
+
             </form>
+
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -286,9 +292,110 @@
                     </div> -->
         <!-- </form>
             </div> -->
+
+
+
     </div>
     </div>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+    <script>
+        function storeTraumaIcon(x, y, traumaType) {
+            let traumaIcons = JSON.parse(localStorage.getItem('traumaIcons')) || [];
+            traumaIcons.push({ x, y, traumaType });
+            localStorage.setItem('traumaIcons', JSON.stringify(traumaIcons));
+        }
+
+        function removeLastTraumaIcon() {
+            let traumaIcons = JSON.parse(localStorage.getItem('traumaIcons')) || [];
+            if (traumaIcons.length > 0) {
+                traumaIcons.pop();
+                localStorage.setItem('traumaIcons', JSON.stringify(traumaIcons));
+
+                // Remove o último ícone da imagem
+                let imageContainer = document.getElementById('imageContainer');
+                let lastIcon = imageContainer.lastElementChild;
+                if (lastIcon.tagName === 'IMG') {
+                    imageContainer.removeChild(lastIcon);
+                }
+            }
+        }
+
+        function recreateTraumaImage() {
+            let traumaIcons = JSON.parse(localStorage.getItem('traumaIcons')) || {};
+            traumaIcons.forEach(icon => {
+                createTraumaIcon(icon.x, icon.y, icon.traumaType);
+            });
+        }
+
+        function createTraumaIcon(x, y, traumaType) {
+            let icon = document.createElement('img');
+            icon.src = `/trauma_icon/${traumaType}.png`;
+            icon.style.position = 'absolute';
+            let iconWidth = 50;
+            let iconHeight = 50;
+            icon.style.left = `${x - iconWidth / 2}px`;
+            icon.style.top = `${y - iconHeight / 2}px`;
+            icon.style.width = `${iconWidth}px`;
+            icon.style.height = `${iconHeight}px`;
+            icon.style.padding = '0';
+            document.getElementById('imageContainer').appendChild(icon);
+        }
+
+        document.addEventListener('DOMContentLoaded', recreateTraumaImage);
+
+        document.getElementById('undoBtn').addEventListener('click', function () {
+            removeLastTraumaIcon();
+        });
+
+        document.getElementById('nextBtn').addEventListener('click', async function (e) {
+            e.preventDefault();
+
+            let canvas = await html2canvas(document.getElementById('imageContainer'));
+            let imgData = canvas.toDataURL('image/png');
+
+            // Recupera o objeto JSON existente ou cria um novo se não existir
+            let formData = JSON.parse(localStorage.getItem('formData')) || {};
+
+            // Adiciona a imagem ao objeto JSON
+            formData['traumaImage'] = imgData;
+
+            // Armazena o objeto JSON atualizado no localStorage
+            localStorage.setItem('formData', JSON.stringify(formData));
+
+            console.log('Stored Data:', formData);  // Imprime os dados armazenados no localStorage
+
+            // Navega para a próxima página
+            window.location.href = 'traumaDesc.html';
+        });
+
+        let img = document.getElementById('humanBody');
+        img.addEventListener('click', function (e) {
+            let x = e.offsetX;
+            let y = e.offsetY;
+            let traumaType = document.getElementById('traumaType').value;
+
+            storeTraumaIcon(x, y, traumaType);
+            createTraumaIcon(x, y, traumaType);
+        });
+
+        function imageLogin() {
+            // Verify if the user is logged in
+            fetch('/menu').then(res => res.json()).then(data => {
+                if (data.loggedin) {
+                    // If the user is logged in, redirect to the menu
+                    window.location.href = '/menu.html';
+                } else {
+                    // If the user is not logged in, redirect to the login page
+                    window.location.href = '/login.html';
+                }
+            }).catch(err => {
+                console.error(err);
+                alert('Erro de conexão!');
+            });
+        }
+    </script>
 
 
 
