--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -106,24 +106,23 @@
             width: 90%;
         }
 
-<<<<<<< HEAD
+
         .card-body-cor {
             display: flex;
             flex-direction: column;
             width: 90%;
             padding: 20px;
-=======
+
+        }
         #option {
             display: flex;
->>>>>>> ec9dedfc4ebfdec2dd581df78d413d16566e512e
+
         }
 
         .espaço_botao {
             display: flex;
             width: 100%;
-<<<<<<< HEAD
-=======
-        } */
+        } 
 
         .corpo {
             display: flex;
@@ -142,7 +141,6 @@
         .espaço_botao {
             display: flex;
             width: 100%;
->>>>>>> ec9dedfc4ebfdec2dd581df78d413d16566e512e
             height: 15vh;
             justify-content: center;
         }
@@ -362,23 +360,22 @@
             });
         }
 
-<<<<<<< HEAD
-        <!-- <div class="row position-relative" id="imageContainer">
+        <div class="row position-relative" id="imageContainer">
                         <img id="humanBody" src="/images/corpo_maior.PNG" alt="body-image">
-                    </div> -->
-        <!-- Buton to undo -->
-        <!-- <div class="d-flex justify-content-center mt-4">
+                    </div> 
+         Buton to undo
+         <div class="d-flex justify-content-center mt-4">
                         <button type="button" class="btn btn-light fw-bold" id="undoBtn">Desfazer</button>
                     </div>
                     <div class="d-flex justify-content-between mt-4">
                         <button type="submit" class="btn btn-light" id="backBtn">Voltar</button>
                         <button type="submit" class="btn btn-primary" id="nextBtn">Próximo</button>
-                    </div> -->
-        <!-- </form>
-            </div> -->
+                    </div> 
+        </form>
+            </div>
     </div>
     </div>
-=======
+
         function createTraumaIcon(x, y, traumaType) {
             let icon = document.createElement('img');
             icon.src = `/trauma_icon/${traumaType}.png`;
@@ -392,7 +389,7 @@
             icon.style.padding = '0';
             document.getElementById('imageContainer').appendChild(icon);
         }
->>>>>>> ec9dedfc4ebfdec2dd581df78d413d16566e512e
+
 
         document.addEventListener('DOMContentLoaded', recreateTraumaImage);
 
