--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -85,8 +85,6 @@
         .form-group {
             display: flex;
             justify-content: center;
-            align-items: center;
-            flex-direction: column;
         }
 
         .container-fluid-linha {
@@ -106,23 +104,14 @@
             width: 90%;
         }
 
-
-        .card-body-cor {
-            display: flex;
-            flex-direction: column;
-            width: 90%;
-            padding: 20px;
-
-        }
         #option {
             display: flex;
-
         }
 
-        .espaço_botao {
+        /* .form-control{
             display: flex;
             width: 100%;
-        } 
+        } */
 
         .corpo {
             display: flex;
@@ -260,10 +249,8 @@
                                     <label for="traumaType" class="mt-1 mb-2">Selecione o tipo de trauma:</label>
                                 </div>
                                 <select id="traumaType" class="form-control mb-3">
-                                    <option value="Fratura_Luxacao_Entorse">
-                                        Fraturas/Luxações/Entorses</option>
-                                    <option value="Ferimentos_diversos">Ferimentos diversos
-                                    </option>
+                                    <option value="Fratura_Luxacao_Entorse">Fraturas/Luxações/Entorses</option>
+                                    <option value="Ferimentos_diversos">Ferimentos diversos</option>
                                     <option value="Hemorragia">Hemorragia</option>
                                     <option value="Evisceracao">Evisceração</option>
                                     <option value="FAB_FAF">FAB/FAF</option>
@@ -275,30 +262,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="container-fluid-linha">
-                        <div class="card-body-cor">
-                            <img id="humanBody" src="/images/corpo_maior.PNG" alt="body-image">
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-center mt-4">
-                        <button type="button" class="btn btn-light fw-bold" id="undoBtn">Desfazer</button>
-                    </div>
-
                 </div>
-                <!-- Botão Voltar e Proxima -->
-                <div class="espaço_botao">
-                    <div class="botao">
-                        <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                        <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
-                    </div>
-                </div>
-<<<<<<< HEAD
-            </form>
-
-        </div>
-
-
-=======
                 <div class="corpo">
                     <div class="row" id="imageContainer">
                         <img class="img" id="humanBody" src="/images/corpo_maior.PNG" alt="body-image">
@@ -313,7 +277,6 @@
                         <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
                     </div>
                 </div>
->>>>>>> ec9dedfc4ebfdec2dd581df78d413d16566e512e
 
 
             </form>
@@ -360,22 +323,6 @@
             });
         }
 
-        <div class="row position-relative" id="imageContainer">
-                        <img id="humanBody" src="/images/corpo_maior.PNG" alt="body-image">
-                    </div> 
-         Buton to undo
-         <div class="d-flex justify-content-center mt-4">
-                        <button type="button" class="btn btn-light fw-bold" id="undoBtn">Desfazer</button>
-                    </div>
-                    <div class="d-flex justify-content-between mt-4">
-                        <button type="submit" class="btn btn-light" id="backBtn">Voltar</button>
-                        <button type="submit" class="btn btn-primary" id="nextBtn">Próximo</button>
-                    </div> 
-        </form>
-            </div>
-    </div>
-    </div>
-
         function createTraumaIcon(x, y, traumaType) {
             let icon = document.createElement('img');
             icon.src = `/trauma_icon/${traumaType}.png`;
@@ -389,7 +336,6 @@
             icon.style.padding = '0';
             document.getElementById('imageContainer').appendChild(icon);
         }
-
 
         document.addEventListener('DOMContentLoaded', recreateTraumaImage);
 
@@ -433,10 +379,10 @@
             fetch('/menu').then(res => res.json()).then(data => {
                 if (data.loggedin) {
                     // If the user is logged in, redirect to the menu
-                    window.location.href = '/menu.html';
+                    window.location.href = '';
                 } else {
                     // If the user is not logged in, redirect to the login page
-                    window.location.href = '/login.html';
+                    window.location.href = '';
                 }
             }).catch(err => {
                 console.error(err);
