--- a/pages/homeadm.html
+++ b/pages/homeadm.html
@@ -406,13 +406,13 @@
         var bluecard = document.getElementsByClassName('bluecard')[0];
 
         bluecard.addEventListener("click", function () {
-            window.location.href = "https://g1.globo.com/";
+            window.location.href = "históricocorrencia.html";
         });
 
         var purplecard = document.getElementsByClassName('purplecard')[0];
 
         purplecard.addEventListener("click", function () {
-            window.location.href = "https://g1.globo.com/";
+            window.location.href = "cadastro.html";
         });
     </script>
 </body>
