--- a/pages/situation.html
+++ b/pages/situation.html
@@ -137,118 +137,118 @@
 
 <body>
     <div class="base_situation">
-        <nav class="navbar navbar-dark" id="nav">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="home.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
-              <p class="navbar-title mt-3 fw-bold text">
-                SITUAÇÃO DO PACIENTE
-              </p>
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-                aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+      <nav class="navbar navbar-dark" id="nav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="home.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
+          <p class="navbar-title mt-3 fw-bold text">
+            SITUAÇÃO DO PACIENTE
+          </p>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+            aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+            aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                </li>
+  
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    CATEGORIAS
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
                     </li>
-      
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        CATEGORIAS
-                      </a>
-                      <ul class="dropdown-menu dropdown-menu-dark">
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = '/pages/problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/sinaisesintomas.html'">SINAIS E SINTOMAS</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/ocorrencia.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li><a class="dropdown-item" href="#" onclick="window.location.href = '/pages/sinais.html'">SINAIS VITAIS</a></li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/objetos.html'">OBJETOS RECOLHIDOS</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = '/pages/conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li><a class="dropdown-item" href="#" onclick="window.location.href = '/pages/vitimaera.html'">VÍTIMA ERA</a></li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider" />
-                        </li>
-                        <li>
-                          <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
-                        </li>
-                      </ul>
+                    <li>
+                      <hr class="dropdown-divider" />
                     </li>
-                    <li class="nav-item" style="list-style-type: none">
-                      <a class="nav-link" href="#" onclick="window.location.href = '/pages/perfilbombeiro.html'">PERFIL</a>
+                    <li>
+                      <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                     </li>
-                    <li class="nav-item" style="list-style-type: none">
-                      <a class="nav-link" href="#">SAIR</a>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'sinaisesintomas.html'">SINAIS E SINTOMAS</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a></li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'objetos.html'">OBJETOS RECOLHIDOS</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li><a class="dropdown-item" href="#" onclick="window.location.href = 'vitimaera.html'">VÍTIMA ERA</a></li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider" />
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
                     </li>
                   </ul>
-                </div>
-              </div>
+                </li>
+                <li class="nav-item" style="list-style-type: none">
+                  <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
+                </li>
+                <li class="nav-item" style="list-style-type: none">
+                  <a class="nav-link" href="#">SAIR</a>
+                </li>
+              </ul>
             </div>
-          </nav>
+          </div>
+        </div>
+      </nav>
         <form action="">
             <div class="form-group">
                 <div class="casa mt-9">
@@ -276,7 +276,7 @@
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'home.html'">Voltar</button>
                 <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
             </div>
         </div>
