--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -165,80 +165,80 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">TIPO DE OCORRÊNCIA</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = '/pages/problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'problemasuspeitos.html'">PROBLEMAS ENCONTRADOS SUSPEITOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/sinaisesintomas.html'">SINAIS E SINTOMAS</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'sinaisesintomas.html'">SINAIS E SINTOMAS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'glasglow.html'">AVALIAÇÃO DO PACIENTE (GLASGOW)</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/ocorrencia.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'ocorrencia.html'">LOCALIZAÇÃO DOS TRAUMAS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="#" onclick="window.location.href = '/pages/sinais.html'">SINAIS VITAIS</a></li>
+                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'sinais.html'">SINAIS VITAIS</a></li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/objetos.html'">OBJETOS RECOLHIDOS</a>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = '/pages/conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li><a class="dropdown-item" href="#" onclick="window.location.href = '/pages/vitimaera.html'">VÍTIMA ERA</a></li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'objetos.html'">OBJETOS RECOLHIDOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
+                    <a class="dropdown-item" href="#" style="white-space: break-spaces" onclick="window.location.href = 'conducao.html'">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li><a class="dropdown-item" href="#" onclick="window.location.href = 'vitimaera.html'">VÍTIMA ERA</a></li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'procedimentos.html'">PROCEDIMENTOS EFETUADOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'materiaisutilizados.html'">MATERIAIS UTILIZADOS</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="window.location.href = '/pages/cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'obsimportante.html'">OBSERVAÇÕES IMPORTANTES</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item" style="list-style-type: none">
-                <a class="nav-link" href="#" onclick="window.location.href = '/pages/perfilbombeiro.html'">PERFIL</a>
+                <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
               </li>
               <li class="nav-item" style="list-style-type: none">
                 <a class="nav-link" href="#">SAIR</a>
