--- a/login.html
+++ b/login.html
@@ -117,7 +117,7 @@
                     <br>
                     <input type="password" class="form-control" id="password" name="password" placeholder="Senha">
                     <br>
-                    <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button" style="margin-top: 0.5rem;" href="home.html">Login</button>
+                    <button type="submit" class="btn btn-outline-primary btn-lg" name="submit-button" style="margin-top: 0.5rem;" href="/pages/home.html">Login</button>
             </div>
         </div>
     </form>
