--- a/pages/homeadm.html
+++ b/pages/homeadm.html
@@ -386,7 +386,7 @@
                 </div>
                 <div class="purplecard col-md-5 h-75" id="col4">
                     <div class="legenda text-center h-100">
-                        <b>Espaço do Administrador</b>
+                        <b>Cadastro dos Bombeiros</b>
                     </div>
                 </div>
             </div>
