--- a/pages/situation.html
+++ b/pages/situation.html
@@ -257,14 +257,14 @@
                             <div class="descrition d-flex">
                                 <div class="esp">INCONSCIENTE
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"  href="sinaisesintomas.html">
                                     </div>
                                 </div>
                             </div>
                             <div class="descrition d-flex">
                                 <div class="esp">CONSCIENTE
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"  href="sinaisesintomas.html">
                                     </div>
                                 </div>
                             </div>
@@ -277,7 +277,7 @@
         <div class="espaço_botao">
             <div class="botao">
                 <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'home.html'">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" href="sinaisesintomas.html">Proximo</button>
             </div>
         </div>
     </div>
