--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -273,8 +273,8 @@
                 </div>
                 <div class="espaço_botao">
                     <div class="botao">
-                        <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                        <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+                        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinaisesintomashtml'">Voltar</button>
+                        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'glasglow.html'">Proximo</button>
                     </div>
                 </div>
 
