--- a/pages/conducao.html
+++ b/pages/conducao.html
@@ -342,8 +342,8 @@
         </form>
         <div class="espaço_botao">
             <div class="botao">
-              <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-              <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+              <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'glasglow.html'">Voltar</button>
+              <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'objetos.html'">Proximo</button>
             </div>
           </div>
    
