--- a/pages/glasglow.html
+++ b/pages/glasglow.html
@@ -667,8 +667,8 @@
 
         <div class="espaço_botao">
           <div class="botao">
-            <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'localizatraumas.html'">Voltar</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'conducao.html'">Proximo</button>
           </div>
         </div>
       </div>
