--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -492,8 +492,8 @@
                     <!-- Botão Voltar e Proxima -->
                     <div class="espaço_botao">
                         <div class="botao">
-                            <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                            <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+                            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'vitimaera.html'">Voltar</button>
+                            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinais.html'">Proximo</button>
                         </div>
                     </div>
                 </div>
