--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -429,8 +429,8 @@
         <!-- Botão Voltar e Proxima -->
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'ocorrencia.html'">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'sinaisesintomas.html'">Proximo</button>
             </div>
         </div>
     </div>
