--- a/pages/situation.html
+++ b/pages/situation.html
@@ -277,7 +277,7 @@
         <div class="espaço_botao">
             <div class="botao">
                 <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'home.html'">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg" href="sinaisesintomas.html">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'vitimaera.html'">Proximo</button>
             </div>
         </div>
     </div>
