--- a/pages/vitimaera.html
+++ b/pages/vitimaera.html
@@ -325,8 +325,8 @@
     </div>
     <div class="espaço_botao">
         <div class="botao">
-            <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-            <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+            <button type="button" class="btn btn-outline-primary btn-lg "onclick="window.location.href = 'situation.html'">Voltar</button>
+            <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'ocorrencia.html'">Proximo</button>
         </div>
     </div>
     </div>
