--- a/pages/objetos.html
+++ b/pages/objetos.html
@@ -217,8 +217,8 @@
         <!-- botoes do rodapé -->
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'conducao.html'">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'procedimentos.html'">Proximo</button>
             </div>
         </div>
     </div>
