--- a/pages/home.html
+++ b/pages/home.html
@@ -218,7 +218,7 @@
             <div class="container-fluid">
               <a class="navbar-brand" href="home.html"><img src="../images/avatar_bombeiro.png" width="60px" /></a>
               <p class="navbar-title mt-3 fw-bold text">
-                SITUAÇÃO DO PACIENTE
+                HOME
               </p>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
                 aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
