--- a/pages/sinais.html
+++ b/pages/sinais.html
@@ -96,7 +96,7 @@
         }
 
         .perfusao {
-            width: 36%;
+            width: 47%;
             background-color: #333333;
             box-shadow: 0px 0px 15px #1E90FF;
             border-radius: 18px;
@@ -395,13 +395,14 @@
                                 </div>
 
                                 <span>
-                                    <2SEG< /span>
+                                    >2SEG
+                                </span>    
                             </div>
                             <div class="checks">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="perfusao" id="flexCheckDefault">
                                 </div>
-                                <span>>2SEG</span>
+                                <span><2SEG</span>
                             </div>
                         </div>
                         <div class="normal_anormal d-flex pl-2">
